--- a/css/estilos.css
+++ b/css/estilos.css
@@ -36,7 +36,7 @@ body
     left:0;
     width:100%;
     height:100%;
-    background-image: linear-gradient(180deg,#0000008c 0%,#0000008c 100%),url('../images/apple2.png');
+    background-image: linear-gradient(180deg,#0000008c 0%,#0000008c 100%),url('../images/google.png');
     background-size: cover;
     z-index:-1;
 
