--- a/css/estilos.css
+++ b/css/estilos.css
@@ -56,7 +56,7 @@ body
 }
 
 .nav__link{
-    margin-right: auto;
+    margin-left: 25px;
     padding: 0;
     display: grid;
     grid-auto-flow: column;
