--- a/css/estilos.css
+++ b/css/estilos.css
@@ -56,8 +56,8 @@ body
 }
 
 .nav__link{
-    margin-left: 10px;
-    padding: 20px 0;
+    margin-right: 10px;
+    padding: 10px 0;
     display: grid;
     grid-auto-flow: column;
     grid-auto-columns: max-content;
