--- a/css/estilos.css
+++ b/css/estilos.css
@@ -117,7 +117,7 @@ body
     display: inline-block;
     background-color: #2091F9;
     justify-self: center;
-    color: #fff;
+    color: #black;
     text-decoration: none;
     padding: 7px 7px;
     border-radius: 10px;
