--- a/css/estilos.css
+++ b/css/estilos.css
@@ -56,7 +56,7 @@ body
 }
 
 .nav__link{
-    margin-left: 180px;
+    margin-left: 150px;
     padding: 90px 0;
     display: grid;
     grid-auto-flow: column;
@@ -117,7 +117,7 @@ body
     display: inline-block;
     background-color: #2091F9;
     justify-self: center;
-    color: #black;
+    color: 	#000000;
     text-decoration: none;
     padding: 7px 7px;
     border-radius: 10px;
