--- a/css/estilos.css
+++ b/css/estilos.css
@@ -56,7 +56,7 @@ body
 }
 
 .nav__link{
-    margin-left: 150px;
+    margin-left: 170px;
     padding: 90px 0;
     display: grid;
     grid-auto-flow: column;
@@ -115,9 +115,9 @@ body
 
 .cta{
     display: inline-block;
-    background-color: #2091F9;
+    background-color: #000000;
     justify-self: center;
-    color: 	#000000;
+    color: 	#ffffff;
     text-decoration: none;
     padding: 7px 7px;
     border-radius: 10px;
