--- a/css/estilos.css
+++ b/css/estilos.css
@@ -115,7 +115,7 @@ body
 
 .cta{
     display: inline-block;
-    background-color: #000000;
+    background-color: #708090;
     justify-self: center;
     color: 	#ffffff;
     text-decoration: none;
@@ -248,7 +248,10 @@ body
     font-size: 1rem;
     margin-bottom: 20px;
     color : #5454d4;
-
+    
+.price_container{
+    background-image: linear-gradient(180deg,#0000008c 0%,#0000008c 100%),url('../images/fondo_cursos.png');
+    }
 }
 ul{
     text-align : center;
