--- a/css/estilos.css
+++ b/css/estilos.css
@@ -203,8 +203,12 @@ body
 
 }
 
+.price_container{
+    background-image: linear-gradient(180deg,#0000008c 0%,#0000008c 100%),url('../images/fondo_cursos.png');
+    }
+
 .price__table{
-    padding-top:60px;
+    padding-top:30px;
     display:flex;
     flex-wrap:wrap;
     gap: 2.5em;
@@ -215,11 +219,11 @@ body
 }
 
 .price__element{
-    background-color: #e5e5f7;
+    background-color: #483d8b;
     text-align:center;
     border-radius: 10px;
     width: 330px;
-    padding: 40px;
+    padding: 20px;
     --color-plan: #696871;
     --color-price: #1D293F;
     --bg-cta: #696871;
@@ -249,9 +253,6 @@ body
     margin-bottom: 20px;
     color : #5454d4;
     
-.price_container{
-    background-image: linear-gradient(180deg,#0000008c 0%,#0000008c 100%),url('../images/fondo_cursos.png');
-    }
 }
 ul{
     text-align : center;
