--- a/css/estilos.css
+++ b/css/estilos.css
@@ -204,7 +204,7 @@ body
 }
 
 .price_container{
-    background-image: linear-gradient(180deg,#0000008c 0%,#0000008c 100%),url('../images/fondo_cursos.png');
+    background-image: linear-gradient(180deg,#0000008c 0%,#0000008c 100%),url('../images/google2.png');
     }
 
 .price__table{
