--- a/css/estilos.css
+++ b/css/estilos.css
@@ -219,7 +219,7 @@ body
 }
 
 .price__element{
-    background-color: #483d8b;
+    background-color: #000020;
     text-align:center;
     border-radius: 10px;
     width: 330px;
