--- a/css/estilos.css
+++ b/css/estilos.css
@@ -133,7 +133,8 @@ body
 .subtitle{
     color:var(--color-title);
     font-size: 2rem;
-    margin-bottom: 25px;
+    margin-bottom: 35px;
+    text-align : center;
 }
 
 .about__paragraph{
