--- a/css/estilos.css
+++ b/css/estilos.css
@@ -136,8 +136,9 @@ body
     margin-bottom: 40px;
     text-align : center;
 }
-.subtitle{
+.subtitle2{
     color : #fff;
+    padding-top: 20px;
 }
 
 .about__paragraph{
