--- a/css/estilos.css
+++ b/css/estilos.css
@@ -227,7 +227,7 @@ body
 }
 
 .price__element{
-    background-color: #000020;
+    background-color: #ffffff;
     text-align:center;
     border-radius: 10px;
     width: 200px;
