--- a/css/estilos.css
+++ b/css/estilos.css
@@ -256,10 +256,10 @@ body
     margin-top : 10px;
     display: grid;
     gap: 1em;
-    font-weight: 20;
-    font-size: 1rem;
+    font-weight: 10;
+    font-size: 0.5rem;
     margin-bottom: 10px;
-    color : #ffffff;
+    color : #808080;
     text-align : justify;
 }
 ul{
