--- a/css/estilos.css
+++ b/css/estilos.css
@@ -278,15 +278,15 @@ ul{
 .comp_des{
     margin : 20px 20px 20px 20px;
 }
-.botones{
+.botones {
     min-width : 700px;
     display : #flex;
     justify-content : space-around;
 }
 
-.botones a{
+.botones a {
     text-decoration : none;
-    font-size: 28;
+    font-size: 28px;
     width : 60px;
     height : 60px;
     line-height : 60px;
@@ -294,10 +294,8 @@ ul{
     background : #314652;
     color : #f1f1f1;
     border-radius : 50%;
-    box-shadow: 2px 2px 5px rgba(0,0,0,.5);
-    transition : all .4s ease-in-out;
 }
 
-.botones a:hover{
+.botones a:hover {
     transform : scale(1.2);
 }
