--- a/css/estilos.css
+++ b/css/estilos.css
@@ -279,6 +279,7 @@ ul{
     margin : 20px 20px 20px 20px;
 }
 .botones {
+    width : 60px;
     min-width : 70px;
     max-width : 200px;
     display : #flex;
