--- a/css/estilos.css
+++ b/css/estilos.css
@@ -279,8 +279,7 @@ ul{
     margin : 20px 20px 20px 20px;
 }
 .botones {
-    display:inline;
-    max-width: 30px;
+    width: 50px;
     overflow:hidden;
     margin: 0 auto; 
 }
