--- a/css/estilos.css
+++ b/css/estilos.css
@@ -279,9 +279,15 @@ ul{
     margin : 20px 20px 20px 20px;
 }
 .botones {
-    display: inline;
-    width: 30px;
-    height: 30px;
+    
 }
 
+.icon {
+  display: inline-block;
+  width: 1em;
+  height: 1em;
+  stroke-width: 0;
+  stroke: currentColor;
+  fill: currentColor;
+}
 
